// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Address: Manages customer addresses, storing multiple addresses for a customer.
Customer: Stores information about customers, including their credit limits and balances.
Contact: Manages contact information for customers.
Inventory: Keeps track of product inventory status.
Product: Contains product details such as the unit price.
Item: Represents individual items within an order, including quantity and unit price.
Order: Holds data about customer orders, including dates and notes.
OrderNote: Captures additional notes related to an order.
Payment: Logs payment information against customer orders.
Return: Manages records of returned items.
Shipment: Logs shipment information for orders.
Supplier: Contains supplier details who provide products.
'''
}

Table Address {
    id INTEGER [primary key]
    customer_id INTEGER 
    address VARCHAR 
    }

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    credit_limit FLOAT 
    balance FLOAT 
    }

Table Contact {
    id INTEGER [primary key]
    customer_id INTEGER 
    contact_number VARCHAR 
    }

Table Inventory {
    id INTEGER [primary key]
    product_id INTEGER 
    quantity_available INTEGER 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    unit_price FLOAT 
    }

Table Item {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    unit_price FLOAT 
    amount FLOAT 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    date_created DATETIME 
    date_shipped DATETIME 
    amount_total FLOAT 
    note VARCHAR 
    }

Table OrderNote {
    id INTEGER [primary key]
    order_id INTEGER 
    note VARCHAR 
    }

Table Payment {
    id INTEGER [primary key]
    order_id INTEGER 
    amount FLOAT 
    date_received DATETIME 
    }

Table Return {
    id INTEGER [primary key]
    item_id INTEGER 
    reason VARCHAR 
    }

Table Shipment {
    id INTEGER [primary key]
    order_id INTEGER 
    shipment_date DATETIME 
    carrier VARCHAR 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    contact_number VARCHAR 
    }



// Relationships
    Ref: Address.(customer_id) < Customer.(id)
    Ref: Contact.(customer_id) < Customer.(id)
    Ref: Inventory.(product_id) < Product.(id)
    Ref: Item.(order_id) < Order.(id)
    Ref: Item.(product_id) < Product.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: OrderNote.(order_id) < Order.(id)
    Ref: Payment.(order_id) < Order.(id)
    Ref: Return.(item_id) < Item.(id)
    Ref: Shipment.(order_id) < Order.(id)
